--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,5 +43,8 @@
     "vite-plugin-vue-devtools": "^7.5.4",
     "vitest": "^2.1.4",
     "vue-tsc": "^2.1.10"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-arm64-musl": "^4.27.3"
   }
 }
